进出房间功能

--- a/TODO.txt
+++ b/TODO.txt
@@ -7,12 +7,18 @@
 5. 登陆，登出，串号，注册 OK
 6. 大厅资料显示 OK
 7. 弹窗管理,小提示 OK 
-8. 进出房间
-9. 微信登陆，手机号登陆
+8. 进出房间 OK
+9. 微信登陆
 
 网站优化 备案
 小游戏资质
 appstore 账号
+
+/////// 12.9
+1.roominfo 发了之后，后面的消息发送不出去？
+2.客户端游戏界面内显示玩家信息接入
+3.游戏开始。
+
 
 弹珠小游戏（GameHoodle）
 1.双人对战游戏
@@ -21,6 +27,7 @@ appstore 账号
 
 TODO
 游戏服务 收不到玩家断线消息，只有网关能收到，proto 不同命名空间的同名字的消息编译不出来？
+
 
 
 
