游戏逻辑修改

--- a/TODO.txt
+++ b/TODO.txt
@@ -29,6 +29,11 @@ appstore 账号
 6.接入网络版玩法
 
 
+3.15
+1.打巴掌游戏 一人一下， 参考slap kings
+2.躲飞机游戏 参考太空引力
+
+
 TODO
 游戏服务 收不到玩家断线消息，只有网关能收到. OK
 proto 不同命名空间的同名字的消息编译不出来？
